# tekster-rs

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  nais-dev.yaml  nais-prod.yaml
src/: main.rs  ruting.rs  tekster.rs
tekster/: aktivitetskrav-varsel.alt.MED_ARBEIDSGIVER_nb.txt  aktivitetskrav-varsel.alt.UTEN_ARBEIDSGIVER_nb.txt  aktivitetskrav-varsel.bekreft-label_nb.txt  aktivitetskrav-varsel.ingen-varsel.melding_nb.txt  aktivitetskrav-varsel.ingen-varsel.tittel_nb.txt  aktivitetskrav-varsel.ingress_nb.html  aktivitetskrav-varsel.innhold.MED_ARBEIDSGIVER_nb.html  aktivitetskrav-varsel.innhold.UTEN_ARBEIDSGIVER_nb.html  aktivitetskrav-varsel.kvittering_nb.txt  ao.aap.tekst_nb.txt  ao.aap.tittel_nb.txt  ao.forsikring.tekst_nb.txt  ao.forsikring.tittel_nb.txt  ao.friskmelding.tekst_nb.txt  ao.friskmelding.tittel_nb.txt  ao.hva-na.aktivitetsplan.tekst_nb.txt  ao.hva-na.aktivitetsplan.tittel_nb.txt  ao.hva-na.okonomi.tekst_nb.txt  ao.hva-na.okonomi.tittel_nb.txt  ao.hva-na.snakk-med-arbeidsgiver.tekst_nb.txt  ao.hva-na.snakk-med-arbeidsgiver.tittel_nb.txt  ao.hva-na.tittel_nb.txt  ao.jobb.tekst_nb.txt  ao.jobb.tittel_nb.txt  ao.mer-veiledning.sporsmal_nb.txt  ao.mer-veiledning.tekst_nb.txt  ao.okonomi.tekst_nb.txt  ao.okonomi.tittel_nb.txt  ao.oppgave.inngangstekst_nb.txt  ao.veileder.tekst_nb.html  avbryt-sykmelding.kvittering.sok-om-sykepenger.tekst_nb.txt  avbryt-sykmelding.kvittering.sok-om-sykepenger.tittel_nb.txt  avbryt-sykmelding.kvittering.tittel_nb.txt  avbryt-sykmelding.kvittering.undertekst_nb.html  avvist-sykmelding.bekreft-feilmelding_nb.txt  (+993 more)
(+3 files in other folders)
