[package]
name = "syfotekster-rs"
version = "0.1.0"
authors = ["Kent Daleng <kent.stefan.daleng@nav.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.8"
actix-files = "0.1.1"

bytes = "0.4"
futures = "0.1"
env_logger = "*"
dotenv = "0.10"
lazy_static = "1.4.0"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"
