[package]
name = "syfotekster-rs"
version = "0.1.0"
authors = ["Kent Daleng <kent.stefan.daleng@nav.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"

dotenv = "0.10"
lazy_static = "1.4.0"

serde_json = "1.0"
