[package]
name = "syfotekster-rs"
version = "0.1.2"
authors = ["Kent Daleng <kent.stefan.daleng@nav.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
lazy_static = "1.4"
log = "0.4"
env_logger = "0.7"
serde_json = "1.0"
dotenv = "0.15"
